[tool.poetry]
name = "modpoll"
version = "0.5.0"
description = "A New Command Line Tool for Modbus"
authors = ["Ying Shaodong <helloysd@foxmail.com>"]
readme = "README.md"
homepage = "https://helloysd.gitlab.io/modpoll"
repository = "https://github.com/gavinying/modpoll"
license = "MIT"
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
importlib-metadata = {version = "^1.0", python = "<3.8"}
pymodbus = "^3.0.2"
paho-mqtt = "^1.6.1"
prettytable = "^3.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
bandit = "^1.7.4"
safety = "^2.3.0"
sphinx = "^4.2.0"
sphinx-argparse = "^0.3.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modpoll = "modpoll:app"
