[tool.poetry]
name = "modpoll"
version = "0.8.4"
description = "A New Command-line Tool for Modbus and MQTT"
authors = ["Ying Shaodong <helloysd@gmail.com>"]
repository = "https://github.com/gavinying/modpoll"
documentation = "https://gavinying.github.io/modpoll"
readme = "README.md"
packages = [
  {include = "modpoll"}
]

[tool.poetry.dependencies]
python = ">=3.8.2,<4.0"
importlib-metadata = "^8.0.0"
pymodbus = "~3.5.4"
paho-mqtt = "^1.6.1"
prettytable = "^3.6.0"
requests = "^2.28.1"
pyserial = { version = "^3.5", optional = true }

[tool.poetry.extras]
serial = ["pyserial"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.2.2"
deptry = "^0.16.1"
tox = "^4.16.0"

[tool.poetry.group.docs.dependencies]
sphinx = "~4.2.0"
sphinx-argparse = "^0.3.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "2021.3.14"
pandoc = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
package_module_name_map = { pyserial = "serial" }

[tool.deptry.per_rule_ignores]
DEP002 = ["pyserial"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
modpoll = "modpoll.main:app"
